# ama-tk

./: .gitignore  MANIFEST  MANIFEST.in  README  README.rst  ama.rst  pyproject.toml  setup-dev.cfg  setup.cfg  setup.py
ama/: __init__.py  color.py  getpassw.py  terminal.py  tk.py  tk_color.py  tk_date.py  tk_time.py  tk_tooltip.py  validator.py
ama/example/: a.ppm  sphinx.json  sphinx_terminal.py  sphinx_tk.py  terminal.py  test.json  test_Asker.py  test_sphinx_tk.py  test_tk.py  tk.py
ama/test/: sphinx.json  test.json  test_sphinx.py  test_sphinx_tk.py  test_tk.py  test_validator.py
asker/: __init__.py  ansi.py  terminal.py  tk.py  validator.py
asker/test/: sphinx.json  test_Asker.py  test_sphinx.py  test_sphinx_tk.py
doc/: conf.py  index.rst  module.rst  validation.rst
docs/: conf.py  json.rst  make.bat  module.rst  validation.rst
src/ama/: __init__.py  cursor.py  figures.py  getpassw.py  terminal.py  tk.py  validator.py  wx.py
src/ama_tk/: asker.py  validator.py
src/doc/: Makefile  conf.py  index.rst  json.rst  make.bat  module.rst  module_validator.rst  validation.rst
src/example/: sphinx.json  sphinx_terminal.py  sphinx_tk.py  terminal.py  test.json  tk.py  wxpython.py
src/test/: test_validator.py
