[tool.poetry]
name = "ama-tk"
version = "0.1.0"
description = "Tkinter based Asker."
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/sffjunkie/ama-tk"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "ama_tk", from = "src" }]

[tool.poetry.plugins.ama]
"tkinter" = "ama_tk.asker"

[tool.poetry.dependencies]
python = "^3.9"
babel = "*"
cerberus = "*"
tks = { version = "*" }
ama = { path = "../ama" }
Pillow = "^9.2.0"
customtkinter = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"

[tool.pytest.ini_options]
pythonpath = ["src"]
junit_family = "xunit2"
norecursedirs = [
    ".venv",
    ".git",
    ".tox",
    ".cache",
    ".settings",
    "dist",
    "build",
    "docs",
]

[tool.isort]
profile = "black"
lines_between_sections = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
